# squad-layer-manager

./: .dockerignore  .env.example  .env.example.dev  .env.secrets.example  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc.js  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MIGRATION_COMPLETE.md  MIGRATION_PROGRESS.md  README.md  Uncommitted_changes_before_Checkout_at_2026-06-26,_11_42 a_m__[Changes]1.patch  config.json  config.prev.json  db.sqlite-shm  db.sqlite-wal  docker-compose.test.yaml  docker-compose.yaml  dprint.json  drizzle-layersdb.config.ts  drizzle-squadjs.config.ts  drizzle.config.ts  edit-global-settings.sh  emoji_picker_first_pass.patch  esbuild.config.js  eslint.config.js  index.html  install.sh  package-lock.json  package.json  paths.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  register-otel.mjs  (+11 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: README.md  pre-push  pre-push.js
.zed/: debug.json  settings.json
assets/: config-schema.json  db-config-schema.json  factionunit-configs.json  layer-components.json  score-ranges.json
data/: alliances.csv  assets-airassault-large-offense.csv  assets-amphibious-large-offense.csv  assets-combinedarms-large-defense.csv  assets-combinedarms-large-offense.csv  assets-combinedarms-medium-defense.csv  assets-combinedarms-medium-offense.csv  assets-combinedarms-seed.csv  assets-combinedarms-small.csv  assets-lightinfantry-large-defense.csv  assets-lightinfantry-large-offense.csv  assets-mechanized-large-defense.csv  assets-mechanized-large-offense.csv  assets-motorized-large-defense.csv  assets-motorized-large-offense.csv  assets-support-large-defense.csv  assets-support-large-offense.csv  battlegroups.csv  bg-descriptions.csv  bg-layer-availability.csv  biomes.csv  map-layers.csv  score-ranges.json
docker/: Rcon.cfg  entry.sh  init-devdatabase.sql  logrotate.conf
docs/: ARCHITECTURE.md  CONFIGURING.md  DEV_INSTANCES.md  INSTALLING.md  LAYER_DATA.md  LOG_NAME_MATCHING.md  architecture.md  configuring.md  dev_instances.md  installing.md  log_parsing.md  theme-toggle-feature.md
log-agent/agent/: Cargo.toml  Dockerfile
log-agent/agent/src/: main.rs
server-agent/agent/: Cargo.toml  Dockerfile
server-agent/agent/src/: main.rs
src/: App.tsx  (+25 more)
(+907 files in other folders)
