[package]
name = "slm-server-agent"
version = "0.2.2"
edition = "2021"
description = "Runs on a Squad server host: streams SquadGame.log to Squad Layer Manager and proxies RCON, over one WebSocket."

[[bin]]
name = "slm-server-agent"
path = "src/main.rs"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "net", "io-util", "time", "fs", "signal", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
# no tls feature here: we drive the TLS handshake ourselves with the ring provider (below), which keeps
# musl/windows cross-compilation free of cmake and the aws-lc-rs C toolchain
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
webpki-roots = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
